--- a/docs/package.json
+++ b/docs/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "nh-poc",
+  "name": "@henskelis/nh-poc-docs",
   "version": "0.0.0",
+  "description": "Website containing the documentation of the packages",
   "private": true,
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm"
   },
+  "author": "Henskelis",
   "license": "ISC",
   "packageManager": "pnpm@9.6.0",
   "engines": {
