--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm"
   },
+  "devDependencies": {
+    "typescript": "catalog:"
+  },
   "license": "ISC",
   "packageManager": "pnpm@9.6.0",
   "engines": {
