--- a/packages/hc-forms/package.json
+++ b/packages/hc-forms/package.json
@@ -4,7 +4,12 @@
   "description": "Easy integration of HC forms in a web page",
   "type": "module",
   "scripts": {
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "ts-check": "tsc --emitDeclarationOnly false --noEmit"
+  },
+  "devDependencies": {
+    "tslib": "catalog:",
+    "typescript": "catalog:"
   },
   "author": "Henskelis",
   "keywords": [
