--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "preserve",
     "moduleResolution": "bundler",
-    "noEmit": true,
+    "noEmit": true
   },
   "include": ["./src/**/*"]
 }
