--- a/packages/animations/package.json
+++ b/packages/animations/package.json
@@ -12,11 +12,7 @@
     "typescript": "catalog:"
   },
   "author": "Henskelis",
-  "keywords": [
-    "animations",
-    "web",
-    "web animations api"
-  ],
+  "keywords": ["animations", "web", "web animations api"],
   "license": "ISC",
   "packageManager": "pnpm@9.6.0",
   "engines": {
