--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "lefthook install",
     "ts-check": "turbo run ts-check",
     "format": "biome check --write --linter-enabled=false --no-errors-on-unmatched",
     "lint": "biome lint --fix --no-errors-on-unmatched",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "cspell": "^8.13.0",
+    "lefthook": "^1.7.11",
     "turbo": "^2.0.10",
     "typescript": "catalog:"
   },
