change the names of two packages

--- a/packages/animations/package.json
+++ b/packages/animations/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@henskelis/animations",
+  "name": "@henskelis/test-animations",
   "version": "0.0.0",
   "description": "Collection of animations ready to be used with the Web Animations API",
   "type": "module",
