--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@changesets/cli": "^2.27.7",
     "cspell": "^8.13.0",
     "lefthook": "^1.7.11",
     "turbo": "^2.0.10",
