--- a/packages/hc-forms/package.json
+++ b/packages/hc-forms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@henskelis/test-hc-forms",
+  "name": "@henskelis/bundled-package",
   "version": "0.0.0",
   "description": "Easy integration of HC forms in a web page",
   "type": "module",
