--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "packageManager": "pnpm@9.6.0",
   "engines": {
-    "node": ">=20"
+    "node": ">=20.15.1",
+    "pnpm": ">=9.6.0"
   }
 }
