--- a/packages/hc-forms/package.json
+++ b/packages/hc-forms/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@9.6.0",
   "engines": {
-    "node": ">=20"
+    "node": ">=20.15.1",
+    "pnpm": ">=9.6.0"
   }
 }
