--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,5 +4,10 @@ packages:
   - "packages/*"
 
 catalog:
+  "@commander-js/extra-typings": ^12.1.0
+  commander: ^12.1.0
+  concurrently: ^8.2.2
+  esbuild: ^0.23.0
+  tsc-watch: ^6.2.0
   tslib: ^2.6.3
   typescript: ^5.5.4
