--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,14 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "start": {
+      "cache": false,
+      "persistent": true
+    },
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["./dist", "./tsconfig.tsbuildinfo"]
+    },
     "ts-check": {
       "outputs": ["./tsconfig.tsbuildinfo"]
     }
