fix permissions in deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,4 +11,7 @@ jobs:
     uses: ./.github/workflows/code-quality.yaml
   release:
     name: "[CD] Release"
+    permissions:
+      contents: write
+      pull-requests: write
     uses: ./.github/workflows/release.yaml
