--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Manage release PR and publish packages
         uses: "changesets/action@v1"
         with:
+          title: Version packages
           commit: version packages
           publish: pnpm build && pnpm changeset publish
         env:
