--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   build:
+    name: Build packages
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,5 +22,5 @@ jobs:
           cache: pnpm
       - name: Install dependencies
         run: pnpm install
-      - name: Build packages
+      - name: Build packages and docs
         run: pnpm build
