--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    name: "[CD] Release packages"
+    name: Release
     permissions:
       contents: write
       pull-requests: write
