--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
         name: Search for duplicate successful run
         uses: fkirc/skip-duplicate-actions@v5
         with:
+          concurrent_skipping: same_content_newer
           skip_after_successful_duplicate: 'true'
   code-quality:
     needs: pre_job
