--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ts-check": "turbo run ts-check",
     "format": "biome check --write --linter-enabled=false --no-errors-on-unmatched",
     "lint": "biome lint --fix --no-errors-on-unmatched",
-    "spell-check": "cspell --unique **"
+    "spell-check": "cspell --unique **",
+    "release": "pnpm build && pnpm changeset publish"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
