--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,8 +26,15 @@ jobs:
         run: pnpm install
       - name: Disable telemetry of Turborepo
         run: pnpm turbo telemetry disable
+      - name: Create npm authentication file
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          EOF
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Version and publish packages
-        uses: "changesets/action@v1"
+        uses: changesets/action@v1
         with:
           title: Version packages
           commit: version packages
