--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,9 +27,14 @@ jobs:
       - name: Disable telemetry of Turborepo
         run: pnpm turbo telemetry disable
       - name: Setup npm authentication with a token
-        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          EOF
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Debug npmrc
+        run: cat $HOME/.npmrc
       - name: Version and publish packages
         uses: changesets/action@v1
         with:
