--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,6 +2,11 @@ name: Release
 
 on:
   workflow_call:
+    inputs:
+      node-version:
+        description: Node version to use for building and releasing
+        type: string
+        required: true
 
 jobs:
   release:
@@ -17,25 +22,16 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-      - name: Setup node 20
+      - name: Setup node ${{ inputs.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ inputs.node-version }}
           cache: pnpm
       - name: Install dependencies
         run: pnpm install
       - name: Disable telemetry of Turborepo
         run: pnpm turbo telemetry disable
-      - name: Setup npm authentication with a token
-        run: |
-          cat << EOF > "$HOME/.npmrc"
-            //registry.npmjs.org/:_authToken=$NPM_TOKEN
-          EOF
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Debug npmrc
-        run: cat $HOME/.npmrc
-      - name: Version and publish packages
+      - name: Version or build and publish packages
         uses: changesets/action@v1
         with:
           title: Version packages
@@ -43,3 +39,4 @@ jobs:
           publish: pnpm release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
